--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: "3.7"
 services:
   db:
     image: mysql:latest
-    container_name: restaurantsFlow
+    container_name: restaurantFlow
     restart: always
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: restaurantsFlow
+      MYSQL_DATABASE: restaurantFlow
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: root_password
