setup database and migrations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,7 @@ services:
       MYSQL_ROOT_PASSWORD: root_password
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
-      # NOTE: if we get migrations working, add this so data persists
-      # - db:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - db:/var/lib/mysql
 
 volumes:
   db:
