--- a/packages/api/sqlc.yml
+++ b/packages/api/sqlc.yml
@@ -23,6 +23,8 @@ sql:
           # TABLE NAME WOULD BE CAPITALIZED but same problem as https://github.com/sqlc-dev/sqlc/issues/3089
           - column: "user.user_id"
             go_type: "github.com/google/uuid.UUID"
+          - column: "review.user_id"
+            go_type: "github.com/google/uuid.UUID"
           - db_type: "tinyint"
             nullable: true
             go_type:
