--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mantine/core": "^7.10.0",
     "@mantine/hooks": "^7.10.0",
+    "@tanstack/react-query": "^5.45.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,8 +14,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "bootstrap-icons": "^1.11.3",
+    "leaflet": "^1.9.4",
+    "qs": "^6.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -44,11 +48,14 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
+    "@types/qs": "^6.9.15",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "prettier-plugin-package": "^1.4.0"
+    "prettier-plugin-package": "^1.4.0",
+    "sass": "^1.77.6"
   }
 }
