--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,7 +18,9 @@
     "qs": "^6.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,6 +52,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
     "@types/qs": "^6.9.15",
+    "@types/react-router-dom": "^5.3.3",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
