--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,14 +23,16 @@ services:
     ports:
       - "3307:3306"
     environment:
-      MYSQL_DATABASE: restaurantFlow
+      MYSQL_DATABASE: restaurantFlowAuth
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: root_password
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
-      - db:/var/lib/mysql
+      - auth_db:/var/lib/mysql
 
 volumes:
   db:
+    driver: local
+  auth_db:
     driver: local
